--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="nolose">No lo se</string>
     <string name="si">Si, estoy diagnosticado</string>
     <string name="entrar">Entrar</string>
+    <string name="usuario">Usuario</string>
+    <string name="contraseña">¿Olvidaste la contraseña?</string>
+    <string name="registrate">Registrate</string>
+    <string name="tyc">Terminos y Condiciones</string>
+    <string name="cuenta">Ya tengo Cuenta</string>
+    <string name="registrarme">Registrarme</string>
 </resources>
