--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="cuenta">Ya tengo Cuenta</string>
     <string name="registrarme">Registrarme</string>
     <string name="continuar">Continuar</string>
+    <string name="comenzar">Comenzar</string>
 
 
 </resources>
